<resources>
    <string name="app_name">Life Plus</string>
    <string name="need_help">Need Help?</string>
    <string name="new_user">New User</string>
    <string name="log_in">Log In</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="c_password">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="receive">Receive</string>
    <string name="donate">Donate</string>
    <string name="receiver_info">Receiver Info</string>
    <string name="blood">Blood Group</string>
    <string name="contact">Phone Number</string>
    <string name="location">Location</string>
</resources>