<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="64dp"
        app:srcCompat="@drawable/lifeplus" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_weight="2"
        android:paddingTop="16dp"
        >
        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:textSize="30sp"
            tools:layout_editor_absoluteY="269dp" />

        <EditText
            android:id="@+id/loginEmail"
            android:layout_width="333dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            tools:layout_editor_absoluteY="324dp" />

        <EditText
            android:id="@+id/loginPassword"
            android:layout_width="331dp"
            android:layout_height="46dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            tools:layout_editor_absoluteY="387dp" />

        <TextView
            android:id="@+id/loginSupport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="45dp"
            android:text="@string/need_help"
            android:textAlignment="textEnd"
            android:textColor="#009688"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="279dp"
            tools:layout_editor_absoluteY="447dp" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/submit"
            tools:layout_editor_absoluteY="517dp" />

        <TextView
            android:id="@+id/loginNewUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_user"
            android:layout_marginTop="16dp"
            android:textColor="#009688"
            android:textSize="18sp"
            tools:layout_editor_absoluteY="583dp" />

    </LinearLayout>



</LinearLayout>